--- a/index.html
+++ b/index.html
@@ -96,15 +96,18 @@ Sortegram
   <span id="number-of-participants"></span> participante<span id="part-plural"></span>
   <dl id="user-names"></dl>
   <button id="delete-all" onclick="sgRemoveAll()">Remover todos</button>
-  <button id="sg-save" onclick="">Avançar</button>
+  <button id="sg-save" onclick="">Salvar</button>
+  <button id="sg-done" onclick="">Preparar Sorteio</button>
 </div><!-- #sortegram -->
 
 <div id="start-sortegram" class="close">
   <button onclick="SSgo()" id="ss-generate" class="sort-btn">Sortear</button>
-  <div id="SScurrent"></div>
   <div id="SSresult" class="no-display">Resultado</div>
-  <span id="number-of-participants-2"></span> participante<span id="part-plural-2"></span>
   <dl id="user-names-2"></dl>
+  <div id="SScurrent"></div>
+  <div id="NoPdiv">
+  <span id="number-of-participants-2"></span> participante<span id="part-plural-2"></span>
+  </div>
   <button onclick="SSnew()" class="new-btn no-display">Novo Sorteio</button>
 </div><!-- #sortegram -->
 
